--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "type": "commonjs",
   "dependencies": {
     "body-parser": "^2.2.1",
-    "express": "^5.2.1"
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
+    "helmet": "^8.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^24.10.2",
     "ts-node": "^10.9.2",
